--- a/css/main.css
+++ b/css/main.css
@@ -554,8 +554,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 50px;
-  height: 50px;
+  width: 100%;
+  height: 100%;
   background: url("../images/main/screen-guide-list-arrow.png") no-repeat center;
   opacity: 0.8;
   content: "";
@@ -734,10 +734,6 @@
     bottom: 26%;
   }
 
-  .service .service-list .btn-move {
-    display: none;
-  }
-
   .use-step .sec-copy {
     margin-bottom: 114px;
   }
@@ -828,6 +824,36 @@
 
   .screen-guide .sec-copy em {
     font-size: 2.2rem;
+  }
+
+  .service .service-list .btn-move button {
+    width: 30px;
+    height: 30px;
+  }
+
+  .screen-guide .guide-list {
+   left: 85px;
+   margin-left: 0;
+   margin-top: -120px;
+  }
+
+  .screen-guide .guide-list .slick-arrow {
+    width: 40px;
+    height: 40px;
+    top: 35%;
+  }
+
+  .screen-guide .guide-list .bg {
+    height: 320px;
+  }
+
+  .screen-guide .guide-list .slick-track {
+    margin-top: 27px;
+  }
+
+  .screen-guide .guide-list .slide-box {
+    width: 161px;
+    padding: 0 8px;
   }
 }
 
