--- a/skin/css/skin.css
+++ b/skin/css/skin.css
@@ -1,34 +1,42 @@
 @charset "UTF-8";
 
 html, body {
-  height: 100%;
   width: 100%;
+  height: 100%;
+}
+
+body {
+  background: #000;
 }
 
 .wrap {
   position: relative;
   width: 100%;
   max-width: 750px;
-  min-width: 733px;
   margin: 0 auto;
   background: #000;
-  min-height: 100%;
   color: #fff;
 }
 
+/* header */
 .header {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 120px;
-  z-index: 20;
+  z-index: 100;
+  overflow: hidden;
 }
 
 .header .fix-box {
+  position: relative;
+  width: 100%;
+  max-width: 750px;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  z-index: 10;
 }
 
 .header .logo {
@@ -42,7 +50,6 @@ html, body {
   background-image: url("../../images/common/hd-logo-w.png");
   background-position: center;
   text-indent: -300px;
-  z-index: 10;
 }
 
 .header .btn-m-toggle {
@@ -52,7 +59,6 @@ html, body {
   border: 0;
   background: transparent;
   cursor: pointer;
-  z-index: 10;
 }
 
 .header .btn-m-toggle::before,
@@ -62,7 +68,7 @@ html, body {
   height: 4px;
   border-radius: 3px;
   background: #fff;
-  transition: width 0.3s 0.4s;
+  transition: all 0.3s 0.4s;
   content: "";
 }
 
@@ -79,6 +85,7 @@ html, body {
 .header.active .btn-m-toggle::before,
 .header.active .btn-m-toggle::after {
   width: 0;
+  background: #000;
 }
 
 .header .btn-m-toggle .bar {
@@ -165,19 +172,22 @@ html, body {
 
 .header .menu-list {
   position: fixed;
-  left: 0;
+  left: 100%;
   top: 0;
   width: 100%;
+  max-width: 750px;
   height: 100%;
   padding: 187px 30px 0;
-  background: #000 url("../images/black/bg-menu.png");
+  background: #000 url("../images/black/bg-menu.png") no-repeat bottom;
   box-sizing: border-box;
-  transform: translateX(100%);
+  opacity: 0;
   transition: .5s;
 }
 
 .header.active .menu-list {
-  transform: translateX(0);
+  left: 50%;
+  opacity: 1;
+  transform: translateX(-50%);
 }
 
 .header .menu-list li {
@@ -225,16 +235,37 @@ html, body {
   background-image: url("../images/black/icon-menu07-47x47.png");
 }
 
+/* content */
 .contents-wrap {
  padding: 30px;
+ padding-top: 548px;
+}
+
+.fix-tit .contents-wrap {
+  padding-top: 548px;
+  padding-bottom: 221px;
 }
 
 .contents-title {
   overflow: hidden;
-  position: relative;
+  position: absolute;
+  width: 100%;
+  max-width: 750px;
+  top: 0;
+  left: 50%;
   height: 548px;
-  padding-top: 237px;
+  padding: 237px 30px 0;
   box-sizing: border-box;
+  transform: translateX(-50%);
+  z-index: 10;
+}
+
+.fix-tit .contents-title {
+  overflow: hidden;
+  position: fixed;
+  height: 327px;
+  padding-top: 152px;
+  border-radius: 0 0 60px 0;
 }
 
 .contents-title .inner {
@@ -242,18 +273,27 @@ html, body {
   z-index: 1;
 }
 
+.fix-tit .contents-title .inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .contents-title::before {
-  position: fixed;
+  position: absolute;
   display: block;
   left: 0;
   top: 0;
   width: 100%;
   height: 652px;
-  background: no-repeat center;
-  background-size: 100% 652px;
-  background-image: url("../images/black/bg-title.png");
+  background: no-repeat center top;
+  background-size: contain;
   content: "";
   z-index: 0;
+}
+
+.fix-tit .contents-title::before {
+  background-image: url("../images/black/bg-title.png");
 }
 
 .contents-title .name {
@@ -301,8 +341,8 @@ html, body {
   left: 0;
   width: 100%;
   height: 652px;
-  background: no-repeat center;
-  background-size: 100% 652px;
+  background: no-repeat center top;
+  background-size: contain;
   background-image: url("../images/black/bg-title.png");
   content: "";
 }
@@ -317,7 +357,7 @@ html, body {
   width: calc(50% - 5px);
   margin-right: 10px;
   margin-bottom: 10px;
-  border: 1px solid #7d7061;
+  border: 2px solid #7d7061;
   border-radius: 10px;
   box-sizing: border-box;
 }
@@ -329,5 +369,47 @@ html, body {
 .main-gate li a {
   display: block;
   width: 100%;
-  height: 250px;
+  margin-bottom: 35px;
+  font-size: 36px;
+  text-align: center;
+}
+
+.main-gate li a::before {
+  display: block;
+  margin: 40px 0 24px;
+}
+
+.main-gate li:nth-child(1) a::before {
+  content: url("../images/black/icon-menu01-101x94.png");
+}
+.main-gate li:nth-child(2) a::before {
+  content: url("../images/black/icon-menu02-101x94.png");
+}
+.main-gate li:nth-child(3) a::before {
+  content: url("../images/black/icon-menu03-101x94.png");
+}
+.main-gate li:nth-child(4) a::before {
+  content: url("../images/black/icon-menu04-101x94.png");
+}
+.main-gate li:nth-child(5) a::before {
+  content: url("../images/black/icon-menu05-101x94.png");
+}
+.main-gate li:nth-child(6) a::before {
+  content: url("../images/black/icon-menu06-101x94.png");
+}
+.main-gate li:nth-child(7) a::before {
+  content: url("../images/black/icon-menu07-101x94.png");
+}
+
+
+@keyframes menu-in {
+  from {
+    margin-left: 100%;
+    width: 300%
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
 }
