--- a/skin/css/skin.css
+++ b/skin/css/skin.css
@@ -9,6 +9,10 @@ body {
   background: #000;
 }
 
+body.no-scroll {
+  overflow: hidden;
+}
+
 .wrap {
   position: relative;
   width: 100%;
@@ -401,15 +405,4 @@ body {
   content: url("../images/black/icon-menu07-101x94.png");
 }
 
-
-@keyframes menu-in {
-  from {
-    margin-left: 100%;
-    width: 300%
-  }
-
-  to {
-    margin-left: 0%;
-    width: 100%;
-  }
-}
+/* ----------- white ----------- */
