--- a/skin/css/skin.css
+++ b/skin/css/skin.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 body {
-  background: #000;
+  background: #f5f6f7;
 }
 
 body.no-scroll {
@@ -38,7 +38,6 @@ body.no-scroll {
   width: 100%;
   max-width: 750px;
   margin: 0 auto;
-  background: #000;
   align-items: center;
   justify-content: space-between;
   z-index: 10;
@@ -262,6 +261,7 @@ body.no-scroll {
   left: 50%;
   height: 548px;
   padding: 237px 30px 0;
+  border-radius: 0 0 60px 0;
   box-sizing: border-box;
   transform: translateX(-50%);
   z-index: 10;
@@ -272,7 +272,7 @@ body.no-scroll {
   position: fixed;
   height: 327px;
   padding-top: 152px;
-  border-radius: 0 0 60px 0;
+  
 }
 
 .contents-title .inner {
@@ -286,21 +286,21 @@ body.no-scroll {
   align-items: center;
 }
 
-.contents-title::before {
-  position: absolute;
+.contents-title .bg {
+  position: fixed;
   display: block;
   left: 0;
   top: 0;
   width: 100%;
-  height: 652px;
+  height: 548px;
   background: no-repeat center top;
-  background-size: contain;
+  background-size: cover;
   content: "";
   z-index: 0;
+  background-image: url("../images/black/bg-title.png");
 }
 
 .fix-tit .contents-title::before {
-  background-image: url("../images/black/bg-title.png");
 }
 
 .contents-title .name {
@@ -343,6 +343,10 @@ body.no-scroll {
 /* //bottom!!!!!! */
 
 /* main */
+.main .header .fix-box {
+  background: #000;
+}
+
 .main .contents-wrap::before {
   display: block;
   position: fixed;
@@ -414,20 +418,12 @@ body.no-scroll {
 
 /* ----------- white ----------- */
 
-body.white {
-  background: #fff;
-}
-
 .white .wrap {
   background: #fff;
   color: #000;
 }
 
 /* header */
-.white .header .fix-box {
-  background: #fff;
-}
-
 .white .header .logo {
   background-image: url("../../images/common/hd-logo-c.png");
 }
@@ -517,6 +513,10 @@ body.white {
 }
 
 /* main */
+.white.main .header .fix-box {
+  background: #fff;
+}
+
 .white.main .contents-wrap::before {
   background-image: url("../images/white/bg-main.png");
 }
