--- a/skin/css/skin.css
+++ b/skin/css/skin.css
@@ -18,8 +18,8 @@ body.no-scroll {
   width: 100%;
   max-width: 750px;
   margin: 0 auto;
-  background: #000;
-  color: #fff;
+  background: #fff;
+  color: #000;
 }
 
 /* header */
@@ -138,9 +138,6 @@ body.no-scroll {
   color: #000;
 }
 
-.main .header .btn-back {
-  display: none;
-}
 
 .header .btn-back span {
   display: block;
@@ -252,7 +249,7 @@ body.no-scroll {
   padding-bottom: 221px;
 }
 
-.contents-title {
+.info-head {
   overflow: hidden;
   position: absolute;
   width: 100%;
@@ -262,12 +259,14 @@ body.no-scroll {
   height: 548px;
   padding: 237px 30px 0;
   border-radius: 0 0 60px 0;
+  color: #fff;
   box-sizing: border-box;
   transform: translateX(-50%);
+  box-shadow: 0px -20px 70px 0px rgba(0, 0, 0, 0.5);
   z-index: 10;
 }
 
-.fix-tit .contents-title {
+.fix-tit .info-head {
   overflow: hidden;
   position: fixed;
   height: 327px;
@@ -275,18 +274,18 @@ body.no-scroll {
   
 }
 
-.contents-title .inner {
+.info-head .inner {
   position: relative;
   z-index: 1;
 }
 
-.fix-tit .contents-title .inner {
+.fix-tit .info-head .inner {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.contents-title .bg {
+.info-head .bg {
   position: fixed;
   display: block;
   left: 0;
@@ -300,10 +299,7 @@ body.no-scroll {
   background-image: url("../images/black/bg-title.png");
 }
 
-.fix-tit .contents-title::before {
-}
-
-.contents-title .name {
+.info-head .name {
   margin-bottom: 37px;
   font-size: 50px;
   font-family: 'Noto Serif KR';
@@ -311,20 +307,26 @@ body.no-scroll {
   color: #ffe0bb;
 }
 
-.contents-title .info dl {
+.info-head .info dl {
   display: flex;
   align-items: center;
   margin-bottom: 8px;
 }
 
-.contents-title .info dt {
+.info-head .info dt {
   margin-right: 14px;
   font-size: 28px;
   color: #959595;
 }
 
-.contents-title .info dd {
+.info-head .info dd {
   font-size: 32px;
+}
+
+.con-title {
+  padding-top: 52px;
+  padding-bottom: 14px;
+  font-size: 40px;
 }
 
 /* bottom !!!! */
@@ -343,8 +345,17 @@ body.no-scroll {
 /* //bottom!!!!!! */
 
 /* main */
+.main .wrap {
+  background: #000;
+  color: #fff;
+}
+
 .main .header .fix-box {
   background: #000;
+}
+
+.main .header .btn-back {
+  display: none;
 }
 
 .main .contents-wrap::before {
@@ -354,7 +365,7 @@ body.no-scroll {
   left: 0;
   width: 100%;
   height: 652px;
-  background: no-repeat center top;
+  background: no-repeat center bottom;
   background-size: contain;
   background-image: url("../images/black/bg-main.png");
   content: "";
@@ -415,13 +426,24 @@ body.no-scroll {
   content: url("../images/black/icon-menu07-101x94.png");
 }
 
+/* gallery */
+.grid .grid-sizer {
+  width: calc(50% - 4px);
+}
+.grid .grid-item {
+  float: left;
+  width: calc(50% - 4px);
+  margin-bottom: 8px;
+  box-sizing: border-box;
+}
+
+.grid li img {
+  display: block;
+  width: 100%;
+}
+
 
 /* ----------- white ----------- */
-
-.white .wrap {
-  background: #fff;
-  color: #000;
-}
 
 /* header */
 .white .header .logo {
@@ -504,15 +526,24 @@ body.no-scroll {
 }
 
 /* contents */
-.white.fix-tit .contents-title::before {
+.white .info-head {
+  
+  color: #000;
+}
+.white .info-head .bg {
   background-image: url("../images/white/bg-title.png");
 }
 
-.white .contents-title .name {
+.white .info-head .name {
   color: #b9a26b;
 }
 
 /* main */
+.white.main .wrap {
+  background: #fff;
+  color: #000;
+}
+
 .white.main .header .fix-box {
   background: #fff;
 }
@@ -546,4 +577,11 @@ body.no-scroll {
 }
 .white .main-gate li:nth-child(7) a::before {
   content: url("../images/white/icon-menu07-101x94.png");
+}
+
+@media screen and (max-width: 600px) {
+  
+}
+
+@media screen and (max-width: 320px) {
 }
