--- a/skin/css/skin.css
+++ b/skin/css/skin.css
@@ -17,6 +17,7 @@ body.no-scroll {
   position: relative;
   width: 100%;
   max-width: 750px;
+  min-height: 100%;
   margin: 0 auto;
   background: #fff;
   color: #000;
@@ -191,6 +192,7 @@ body.no-scroll {
   left: 50%;
   opacity: 1;
   transform: translateX(-50%);
+  color: #fff;
 }
 
 .header .menu-list li {
@@ -246,7 +248,7 @@ body.no-scroll {
 
 .fix-tit .contents-wrap {
   padding-top: 548px;
-  padding-bottom: 221px;
+  padding-bottom: 127px;
 }
 
 .info-head {
@@ -323,26 +325,119 @@ body.no-scroll {
   font-size: 32px;
 }
 
-.con-title {
+.con-tit {
   padding-top: 52px;
-  padding-bottom: 14px;
+  padding-bottom: 15px;
   font-size: 40px;
 }
 
-/* bottom !!!! */
-.fix-btm .contents {
-  padding-bottom: 100px;
+.con-sub-tit {
+  padding-top: 56px;
+  padding-bottom: 18px;
+  font-size: 30px;
 }
 
-.contents-btm {
+.table-info {
+  border-top: 1px solid #a0a0a0;
+}
+
+.table-info th,
+.table-info td {
+  height: 73px;
+  border-bottom: 1px solid rgba(221, 221, 221, .4);
+}
+
+.table-info th {
+  width: 175px;
+  background: #79848e;
+  font-size: 30px;
+  font-weight: 400;
+  color: #fff;
+}
+
+.table-info td{
+  padding-left: 30px;
+  font-size: 32px;
+  font-weight: 500;
+  text-align: left;
+}
+
+.fix-btm .contents {
+  padding-bottom: 140px;
+}
+
+.con-btm {
+  display: flex;
   position: fixed;
   left: 0;
+  right: 0;
   bottom: 0;
   width: 100%;
-  height: 100px;
-  background: red;
+  max-width: 750px;
+  margin: 0 auto;
 }
-/* //bottom!!!!!! */
+
+.con-btm .btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  height: 120px;
+  border: 0;
+  background: #b9a26b;
+  font-size: 34px;
+  color: #fff;
+  text-align: center;
+}
+
+.con-btm .btn-lg {
+  width: 100%;
+}
+
+.con-btm .btn-lg::before {
+  margin-right: 26px;
+}
+
+.con-btm .btn-regular {
+  background: #aaa;
+}
+
+.btn-call::before {
+  display: block;
+  width: 28px;
+  height: 28px;
+  margin-right: 14px;
+  background: url("../images/common/icon-btn-call.png");
+  content: "";
+}
+
+/* placeholder 스타일 지정 */
+input::-webkit-input-placeholder {
+  color: #c8c8c8;
+}
+
+input:-ms-input-placeholder {
+  color: #c8c8c8;
+}
+
+textarea::-webkit-input-placeholder {
+  color: #c8c8c8;
+}
+
+textarea:-ms-input-placeholder {
+  color: #c8c8c8;
+}
+
+input::placeholder {
+  color: #c8c8c8;
+  opacity: 1;
+}
+
+textarea::placeholder {
+  color: #c8c8c8;
+  opacity: 1;
+}
+
 
 /* main */
 .main .wrap {
@@ -427,19 +522,340 @@ body.no-scroll {
 }
 
 /* gallery */
-.grid .grid-sizer {
+.gallery li {
   width: calc(50% - 4px);
 }
-.grid .grid-item {
+.gallery .gallery-item {
   float: left;
-  width: calc(50% - 4px);
   margin-bottom: 8px;
   box-sizing: border-box;
 }
 
-.grid li img {
+.gallery li img {
   display: block;
   width: 100%;
+}
+
+.gallery .btn-vlarger {
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+  background: transparent;
+  text-indent: -9999px;
+}
+
+.view-box-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, .5);
+  z-index: 100;
+}
+
+.view-box-wrap .view-box {
+  position: absolute;
+  left: 0;
+  right: 0;
+  width: 100%;
+  max-width: 750px;
+  margin: 0 auto;
+  padding: 30px;
+  box-sizing: border-box;
+}
+
+.view-box-wrap img {
+  display: block;
+  width: 100%;
+}
+
+.view-close {
+  overflow: hidden;
+  position: relative;
+  margin-bottom: 40px;
+  border: 0;
+  width: 64px;
+  height: 64px;
+  float: right;
+  background: transparent;
+  text-indent: -9999px;
+}
+
+.view-close::before,
+.view-close::after {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 6px;
+  border-radius: 3px;
+  background: #fff;
+  content: "";
+}
+
+.view-close::before {
+  transform: rotate(45deg);
+}
+
+.view-close::after {
+  transform: rotate(-45deg);
+}
+
+/* info */
+.fam-list li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100px;
+  padding: 0 30px;
+  border-radius: 10px;
+  background: rgba(121, 132, 142, .1);
+  margin-bottom: 10px;
+}
+
+.fam-list li p span {
+  display: inline-block;
+  width: 55px;
+  margin-right: 30px;
+  font-size: 30px;
+  text-align: center;
+  color: #aa804f;
+}
+
+.fam-list li p em {
+  font-size: 32px;
+  font-weight: 500;
+}
+
+.fam-list li .btn-call {
+  display: flex;
+  align-items: center;
+  height: 52px;
+  padding: 0 28px;
+  border-radius: 26px;
+  background: #79848e;
+  font-size: 28px;
+  color: #fff;
+}
+
+/* map */
+.map-box {
+  height: 650px;
+  margin-bottom: 40px;
+  background: #eaeaea;
+}
+
+/* payment */
+.payment .sub-txt {
+  padding-left: 126px;
+  margin-bottom: 38px;
+  background: url("../images/common/icon-flower.png") no-repeat center left;
+  font-size: 26px;
+  font-weight: 300;
+}
+
+.payment .sub-txt strong {
+  font-weight: 500;
+}
+
+.deadline {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  border-radius: 10px;
+  background: #f1f2f3;
+  font-weight: 500;
+}
+
+.deadline dt {
+  margin-right: 18px;
+  padding-left: 42px;
+  background: url("../images/common/icon-clock.png") no-repeat center left;
+  font-size: 28px;
+  color: #e54123;
+}
+
+.deadline dd {
+  font-size: 30px;
+}
+
+.acc-list {
+  padding-top: 13px;
+}
+
+.acc-list li {
+  margin-bottom: 26px;
+  padding: 34px 58px;
+  border: 1px solid #e5e5e5;
+  border-radius: 10px;
+  box-shadow: 8px 12px 15px 0px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.acc-list li h3 {
+  margin-bottom: 20px;
+  font-size: 32px;
+  font-weight: 500;
+}
+
+.acc-list li h3 span {
+  margin-right: 17px;
+  font-size: 30px;
+  font-weight: 400;
+  color: #aa804f;
+}
+
+.acc-list li dl {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 41px;
+  font-size: 28px;
+  font-weight: normal;
+  font-weight: 350;
+  color: #555;
+}
+
+.acc-list li .btn-copy {
+  width: 100%;
+  height: 88px;
+  border-color: #b9a26b;
+  border-radius: 10px;
+  background: #fff;
+  font-size: 28px;
+  font-weight: 400;
+  color: #b9a26b;
+}
+
+/* guest */
+.board-list li {
+  border: 2px solid #cea88f;
+  position: relative;
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 30px 30px;
+  border-radius: 10px;
+  background-size: 100%;
+  box-sizing: border-box;
+  box-shadow: 8px 12px 15px 0px rgba(0, 0, 0, 0.1);
+
+}
+
+.board-list li:last-child {
+  margin-bottom: 0;
+}
+
+.board-list li .name {
+  margin-bottom: 10px;
+  font-size: 32px;
+  font-weight: 500;
+}
+
+.board-list li .name span {
+  margin-right: 9px;
+  font-size: 30px;
+  font-weight: 400;
+  color: #aa804f;
+}
+
+.board-list li .tit {
+  margin-bottom: 18px;
+  font-size: 36px;
+  font-weight: 500;
+}
+
+.board-list li .date {
+  font-size: 28px;
+  color: #999;
+}
+
+.board-list li .btn-del {
+  overflow: hidden;
+  position: absolute;
+  right: 30px;
+  top: 30px;
+  width: 50px;
+  height: 50px;
+  border: 0;
+  border-radius: 100%;
+  background: #f4f4f4;
+  text-indent: -999px;
+}
+
+.board-list li .btn-del::before,
+.board-list li .btn-del::after {
+  display: block;
+  position: absolute;
+  top: 45%;
+  left: 13px;
+  width: 50%;
+  height: 3px;
+  border-radius: 2px;
+  background: #c5c5c5;
+  content: "";
+}
+
+.board-list li .btn-del::before {
+  transform: rotate(-45deg);
+}
+
+.board-list li .btn-del::after {
+  transform: rotate(45deg);
+}
+
+
+/* write */
+.write {
+  background: #f8f8f8;
+}
+
+.input-row {
+  margin-bottom: 55px;
+}
+
+div.input-row:last-child {
+  margin-bottom: 0;
+}
+
+.input-row label {
+  display: block;
+  margin-bottom: 7px;
+  font-size: 28px;
+  font-weight: 700;
+  color: #b9a26b;
+}
+
+.input-row label span {
+  font-weight: 400;
+  color: #919191;
+}
+
+.input-row input,
+.input-row select {
+  width: 100%;
+  height: 3.125em;
+  margin-bottom: 8px;
+  border-color: #ccc;
+  font-size: 32px;
+}
+
+.input-row input:last-child,
+.input-row select:last-child {
+  margin-bottom: 0;
 }
 
 
@@ -493,6 +909,7 @@ body.no-scroll {
 
 .white .header .menu-list {
   background: #fff url("../images/white/bg-menu.png") no-repeat bottom;
+  color: #000;
 }
 
 .white .header .menu-list li {
